[gd_scene load_steps=6 format=3 uid="uid://biw7gyximv00b"]

[ext_resource type="PackedScene" uid="uid://ctd5mwd8gbfld" path="res://cenas/prototipo/generator/generator.tscn" id="1_fbsrp"]
[ext_resource type="Script" path="res://cenas/prototipo/interface/user_interface.gd" id="1_yvqa6"]
[ext_resource type="Script" path="res://cenas/prototipo/interface/click_label.gd" id="2_g2cdc"]
[ext_resource type="PackedScene" uid="uid://dsf7ifl3jdbqd" path="res://cenas/prototipo/clicker/clicker.tscn" id="2_wl03j"]
[ext_resource type="PackedScene" uid="uid://dnkbmth0ndtdp" path="res://cenas/prototipo/upgrade/upgrade.tscn" id="5_8qe7o"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvqa6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Navigator" type="Control" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LinkGerador" type="LinkButton" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Gerador de Click"

[node name="LinkCliker" type="LinkButton" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Criador de Click"

[node name="Upgrade" type="LinkButton" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Upgrade"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Resources" type="Control" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="click_label" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Click: 0"
script = ExtResource("2_g2cdc")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MainView" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Clicker" parent="HBoxContainer/MainView" node_paths=PackedStringArray("user_interface") instance=ExtResource("2_wl03j")]
layout_mode = 1
user_interface = NodePath("../../..")
view = 1

[node name="Generator" parent="HBoxContainer/MainView" node_paths=PackedStringArray("user_interface") instance=ExtResource("1_fbsrp")]
visible = false
layout_mode = 1
user_interface = NodePath("../../..")

[node name="Upgrade" parent="HBoxContainer/MainView" node_paths=PackedStringArray("user_interface") instance=ExtResource("5_8qe7o")]
visible = false
layout_mode = 1
user_interface = NodePath("../../..")

[connection signal="nav_views" from="." to="." method="_on_nav_views"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/Navigator/VBoxContainer/LinkGerador" to="." method="_on_link_gerador_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/Navigator/VBoxContainer/LinkCliker" to="." method="_on_link_cliker_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/Navigator/VBoxContainer/Upgrade" to="." method="_on_upgrade_pressed"]
